# sqlite-native-libraries

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
sqlite3-native-library/: build.gradle  build.gradle.kts
sqlite3-native-library/cpp/: CMakeLists.txt  sqlite3-arabic-tokenizer.c
sqlite3-native-library/src/main/: AndroidManifest.xml
